--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
     "dotenv": "^16.0.3",
     "firebase": "^9.17.2",
     "react": "^18.2.0",
@@ -30,6 +26,15 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux-logger": "^3.0.9",
+    "@types/stripe": "^8.0.417",
+    "@types/styled-components": "^5.1.26",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
