--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,7 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        "baseUrl": "src",
-        "paths": {
-            "@/*": [ "*" ]
-        }
+        "baseUrl": "src"
     },
     "include": [
         "src"
